build(presentation): disable live.js

--- a/presentation.html
+++ b/presentation.html
@@ -847,8 +847,7 @@ mit allen Links &amp; Demovideos</span></p></div>
 <span class="icon"><i class="fa fa-at"></i></span> <a href="mailto:ben@tolor.de">ben@tolor.de</a><br>
 <span class="icon"><i class="fa fa-github"></i></span> <a href="https://github.com/bentolor/java21-lts-presentation">bentolor</a></p></div></div></div>
 <div class="paragraph clear xx-small highlight tgap"><p>Proudly made with <span class="icon emphasize"><i class="fa fa-heart fa-love"></i></span> and:  <a href="https://docs.asciidoctor.org/reveal.js-converter/latest/"><code>asciidoctor-revealjs</code></a>,
-<a href="https://www.pexels.com/">pexels.com</a> &amp; <a href="https://de.freeimages.com/">freeimages.com</a></p></div>
-<script src="./live.js"></script></div></section></div></div><script src="reveal.js/dist/reveal.js"></script><script>Array.prototype.slice.call(document.querySelectorAll('.slides section')).forEach(function(slide) {
+<a href="https://www.pexels.com/">pexels.com</a> &amp; <a href="https://de.freeimages.com/">freeimages.com</a></p></div></div></section></div></div><script src="reveal.js/dist/reveal.js"></script><script>Array.prototype.slice.call(document.querySelectorAll('.slides section')).forEach(function(slide) {
   if (slide.getAttribute('data-background-color')) return;
   // user needs to explicitly say he wants CSS color to override otherwise we might break custom css or theme (#226)
   if (!(slide.classList.contains('canvas') || slide.classList.contains('background'))) return;
