fix(index.html): fix title typo

--- a/index.html
+++ b/index.html
@@ -498,7 +498,7 @@
         <i>Deutsch:</i>
         <h3><a  href="presentation.html"> Neues bei Tools, GCs, Vector und FFM API in Java 21 LTS</a></h2>
           <i>English:</i>
-          <h3><a href="presentation-en.html">21 LTS under the hood: What's new in tools, GCs, Vector and FFM API</a></h2>
+          <h3><a href="presentation-en.html">Java 21 LTS under the hood: What's new in tools, GCs, Vector and FFM API</a></h2>
         <div class="preamble">
         </div>
       </section>
